--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -7,7 +7,18 @@
 
     </head>
     <body>
-       
+        <style>
+            h1 {
+              color: blue;
+              font-family: verdana;
+              font-size: 300%;
+            }
+            p {
+              color: red;
+              font-family: courier;
+              font-size: 160%;
+            }
+            </style>
        
        <form action="/action_page.php">
         <label for="fname">First name:</label>
